@@ -13,6 +13,10 @@
 
 	* src/document.h, src/dialogs/xml-tree.cpp: removed sp_document_lookup_id
 
+	* src/sp-object.cpp: clarify what is happening with bug #980407 --
+	  the clone is getting attached to the repr before the original SPObject
+	  is.
+
 2004-06-26  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/node-context.cpp: make sure nodepath->nodeContext is set up
